code/force-app/main/default/objects/FinServ__ContactContactRelation__c/fields/FinServ__InverseRelationship__c.field-meta.xml
<CustomField>
    <fullName>FinServ__InverseRelationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Uniquely identifies the relationship between Contact__c and RelatedContact__c so that it can be referenced by a trigger that creates the inverse relationship record.</description>
    <label>InverseRelationship</label>
    <referenceTo>FinServ__ContactContactRelation__c</referenceTo>
    <relationshipLabel>Contact Contact Relations</relationshipLabel>
    <relationshipName>ContactContactRelations</relationshipName>
    <type>Lookup</type>
</CustomField>