code/force-app/main/default/objects/FinServ__ContactContactRelation__c/fields/FinServ__Role__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Role__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Related Role</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FinServ__ReciprocalRole__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Contact Role</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FinServ__ReciprocalRole__c</referenceTo>
    <relationshipName>ContactReciprocalRole</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>