code/force-app/main/default/objects/FinServ__ContactContactRelation__c/fields/FinServ__StartDate__c.field-meta.xml
<CustomField>
    <fullName>FinServ__StartDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>